--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>🐿️ | Camping and hiking tours</title>
+  <title>Follow the White 🐿️</title>
 </head>
 <body>
   <div>
