--- a/index.html
+++ b/index.html
@@ -1,15 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Follow the White 🐿️</title>
-</head>
-<body>
-  <div>
-    <h1>FOLLOW THE WHITE SQUIRREL hola</h1>
-    <img src="https://c1.staticflickr.com/6/5737/23665223981_3ce60077db_b.jpg" alt="white squirrel">
-  </div>
+<html>
+	<head>
+		<title></title>
+		<link rel="stylesheet" type="text/css" href="css/styles.css">
+	</head>
 
-</body>
+	<body>
+		<header>
+			<img src='pictures/squirrel1.jpg' class='squirrel1' />
+			<div id="block5">
+				<div class="date_block">
+					<div class=""></div>
+					<div class="comments"></div>
+				</div>
+
+				<div style="padding: 10px;">
+					<h2><a href="#">FOLLOW THE WITE SQUIRREL</a></h2>
+					<span class="author"><a href="#"><span>...if you can</span></a>
+				</div>
+			</div>
+      <img src='pictures/barca.jpg' class='barca' />
+	  </header>
+
+		<main>
+			<h2>Our mission as a little adventure family is to bring the native and
+	foreigners the opportunity to explore the wild canada far from the concrete
+	but near from the people and nature. Where we belong.</h2>
+
+	    <h3>MEET OUR TEAM</h3>
+	    <p class='different'>
+
+	    <h4>CAPTAIN BOWIE</h4>
+	    <img src='pictures/bowie.jpg' class='bowie'/>
+	    <p> Once upon a time there was born Captain Bowie in Tenesse in july 2015
+	        in the EE.UU. He was allways following a dream.
+	        Every day Captain Bowie was thinking if that idea could be
+	        possible. Because of that he come to Toronto into our family to persui his
+	        dream. Because of that he trainned hard every day. Until finally
+	        Captain Bowie realice that following the white squirrel is just an attitude!
+					HE will lead you into an adventure, sometimes he will stop just to be
+	        sure you are doing well :)</p>
+
+	    <h4>DANIEL</h5>
+	    <img src='pictures/dani.jpg' class='daniel' />
+	    Hello I am Daniel...
+
+	    <h4>SHARON</h6>
+	    <img src='pictures/sharon.jpg' class='sharon'/>
+	    Hi and I am Sharon...
+
+			<div class="gallery">
+
+				<h5>POLAROIDS</h5>
+				<div class="polaroid-images">
+					<a href="" title="Base Camp"><img height="200" src="pictures/tienda.jpg" alt="Cave" title="Cave" /></a>
+					<a href="" title="Mirror"><img height="200" src="pictures/paisaje.jpg" alt="Cave" title="Cave" /></a>
+					<a href="" title="Good Morning"><img height="200" src="pictures/morning.jpg" alt="Cave" title="Cave" /></a>
+					<a href="" title="Canoes"><img height="200" src="pictures/canoa.jpg" alt="Cave" title="Cave" /></a>
+					<a href="" title="Just walk!"><img height="200" src="pictures/paseo.jpg" alt="Cave" title="Cave" /></a>
+					<a href="" title="Sharon and Dani"><img height="200" src="pictures/sharonanddani.jpg" alt="Sharon and Dani" title="" /></a>
+				</div>
+			</div>
+	  </main>
+
+		<footer>
+			Ilimited company of dreams
+			If you want to know more about our litle adventures you can send as a
+			an email to..... or call .....
+		</footer>
+	</body>
 </html>
-rferf
