cleaning up css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</div>
 
 				<div style="padding: 10px;">
-					<h2><a href="#">FOLLOW THE WITE SQUIRREL</a></h2>
+					<h2><a href="#">FOLLOW THE WHITE SQUIRREL</a></h2>
 					<span class="author"><a href="#"><span>...if you can</span></a>
 				</div>
 			</div>
@@ -23,33 +23,30 @@
 	  </header>
 
 		<main>
-			<h2>Our mission as a little adventure family is to bring the native and
-	foreigners the opportunity to explore the wild canada far from the concrete
-	but near from the people and nature. Where we belong.</h2>
+      <section id="intro">
+  			<h2>Our mission as a little adventure family is to bring the native and foreigners the opportunity to explore the wild canada far from the concrete but near from the people and nature. Where we belong.</h2>
+      </section>
 
-	    <h3>MEET OUR TEAM</h3>
-	    <p class='different'>
+      <section id="team">
+  	    <h3>MEET OUR TEAM</h3>
 
-	    <h4>CAPTAIN BOWIE</h4>
-	    <img src='pictures/bowie.jpg' class='bowie'/>
-	    <p> Once upon a time there was born Captain Bowie in Tenesse in july 2015
-	        in the EE.UU. He was allways following a dream.
-	        Every day Captain Bowie was thinking if that idea could be
-	        possible. Because of that he come to Toronto into our family to persui his
-	        dream. Because of that he trainned hard every day. Until finally
-	        Captain Bowie realice that following the white squirrel is just an attitude!
-					HE will lead you into an adventure, sometimes he will stop just to be
-	        sure you are doing well :)</p>
+  	    <h4>CAPTAIN BOWIE</h4>
+  	    <img src='pictures/bowie.jpg' class='team'/>
+  	    <p>
+          Once upon a time there was born Captain Bowie in Tenesse in july 2015 in the EE.UU. He was allways following a dream. Every day Captain Bowie was thinking if that idea could be possible. Because of that he come to Toronto into our family to persui his dream. Because of that he trainned hard every day. Until finally Captain Bowie realice that following the white squirrel is just an attitude! He will lead you into an adventure, sometimes he will stop just to be sure you are doing well :)
+        </p>
 
-	    <h4>DANIEL</h5>
-	    <img src='pictures/dani.jpg' class='daniel' />
-	    Hello I am Daniel...
+  	    <h4>DANIEL</h5>
+  	    <img src='pictures/dani.jpg' class='team' />
+  	    <p>Hello I am Daniel...</p>
 
-	    <h4>SHARON</h6>
-	    <img src='pictures/sharon.jpg' class='sharon'/>
-	    Hi and I am Sharon...
+  	    <h4>SHARON</h6>
+  	    <img src='pictures/sharon.jpg' class='team'/>
+        <p>Hi and I am Sharon...</p>
+      </section>
 
-			<div class="gallery">
+
+			<section id="gallery">
 
 				<h5>POLAROIDS</h5>
 				<div class="polaroid-images">
@@ -60,7 +57,20 @@
 					<a href="" title="Just walk!"><img height="200" src="pictures/paseo.jpg" alt="Cave" title="Cave" /></a>
 					<a href="" title="Sharon and Dani"><img height="200" src="pictures/sharonanddani.jpg" alt="Sharon and Dani" title="" /></a>
 				</div>
-			</div>
+			</section>
+
+      <section id='contact_form'>
+        <h3>CONTACT US</h3>
+        <form action="https://script.google.com/macros/s/AKfycbxb2hQxFXnKvKA67YG2YngTv5zLea5mPjsIecjslySsOG_X7_xp/exec">
+          <label for="name">Name:</label>
+          <input type="text" name="name">
+          <label for="email">Email address:</label>
+          <input type="email" name="email">
+          <label for="email">Message:</label>
+          <input type="text" name="message">
+          <input type="submit" name="submit" class="btn">
+        </form>
+      </section>
 	  </main>
 
 		<footer>
