back to vertical layout

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/horizontal-layout.css">
+    <link href="https://fonts.googleapis.com/css?family=Amatica+SC|Slabo+27px" rel="stylesheet">
     <script type="text/javascript" src="node_modules/handlebars/dist/handlebars.js"></script>
     <script type="text/javascript" src="node_modules/handlebars/dist/handlebars.runtime.js"></script>
     <script type="text/javascript" src="js/hbs.js"></script>
@@ -16,18 +17,14 @@
   </head>
 
   <body>
-    <header id="landing"></header>
-
+    <section id="landing"></section>
     <section id="intro"></section>
-
+    <section id="hiking"></section>
+    <section id="camping"></section>
     <section id="team"></section>
-
-    <section id="bowie"></section>
-
-
+    <section id="pricing"></section>
     <section id="gallery"></section>
-
-    <section id='contact'></section>
+    <section id='contact' class="overlay"></section>
   </body>
 </html>
 
