renamed pictures to images

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" type="text/css" href="css/horizontal-layout.css">
     <link href="https://fonts.googleapis.com/css?family=Amatica+SC|Slabo+27px" rel="stylesheet">
     <script src="https://use.fontawesome.com/560af34abb.js"></script>
-    <script type="text/javascript" src="node_modules/smooth-scroll/dist/js/smooth-scroll.min.js"></script>
-    <script type="text/javascript" src="node_modules/handlebars/dist/handlebars.runtime.js"></script>
+    <script type="text/javascript" src="js/smooth-scroll.min.js"></script>
+    <script type="text/javascript" src="js/handlebars.runtime.js"></script>
     <script type="text/javascript" src="js/hbs.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
