--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="google-site-verification"
+             content="<meta name="google-site-verification" content="_AjTinrdtQgkm-bPpydmYAEjat-gBzpKtoN7RBkIWC0" />" />
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/horizontal-layout.css">
@@ -34,4 +36,3 @@
   </body>
 
 </html>
-
