--- a/index.html
+++ b/index.html
@@ -4,14 +4,6 @@
     <meta name="google-site-verification"
              content="<meta name="google-site-verification" content="_AjTinrdtQgkm-bPpydmYAEjat-gBzpKtoN7RBkIWC0" />" />
     <title></title>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-97707472-1', 'auto');
-  ga('send', 'pageview');
 
 </script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
@@ -43,6 +35,16 @@
     <section id="gallery"></section>
     <section id='contact' class="overlay"></section>
     <footer id='footer'></footer>
-  </body>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-97707472-1', 'auto');
+    ga('send', 'pageview');
+
+  </script>
+</body>
 
 </html>
