--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="google-site-verification"
-             content="<meta name="google-site-verification" content="_AjTinrdtQgkm-bPpydmYAEjat-gBzpKtoN7RBkIWC0" />" />
+    <meta name="google-site-verification" content="<_AjTinrdtQgkm-bPpydmYAEjat-gBzpKtoN7RBkIWC0"/>
     <title></title>
 
     <!-- Google Tag Manager -->
