added logo to landing page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/horizontal-layout.css">
     <link rel="stylesheet" type="text/css" href="css/pikaday.css">
-    <link href="https://fonts.googleapis.com/css?family=Amatica+SC|Slabo+27px" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatica+SC|Roboto" rel="stylesheet">
     <script src="https://use.fontawesome.com/560af34abb.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -51,7 +51,7 @@
     <script type="text/javascript" src="js/hbs.js"></script>
     <script type="text/javascript" src="js/locales/en.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
-    <title>Follow the White Squirrel | Hiking and Camping Tours in Ontario</title>
+    <title>Follow the White Squirrel | Nature tours in Ontario</title>
   </head>
 
   <body>
@@ -59,6 +59,11 @@
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5N595CX"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
+
+    <div class="logo">
+      <span class="bold">Follow the White Squirrel</span><img src="fws_logo.png" alt="logo"><span>Nature tours in Ontario</span>
+    </div>
+
     <section id="landing"></section>
     <section id="intro"></section>
     <section id="hiking"></section>
