english and spanish text

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/horizontal-layout.css">
     <link rel="stylesheet" type="text/css" href="css/pikaday.css">
-    <link href="https://fonts.googleapis.com/css?family=Amatica+SC|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatica+SC|Slabo+27px" rel="stylesheet">
     <script src="https://use.fontawesome.com/560af34abb.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -50,6 +50,7 @@
     <script type="text/javascript" src="js/handlebars.runtime.js"></script>
     <script type="text/javascript" src="js/hbs.js"></script>
     <script type="text/javascript" src="js/locales/en.js"></script>
+    <script type="text/javascript" src="js/locales/es.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
     <title>Follow the White Squirrel | Nature tours in Ontario</title>
   </head>
@@ -60,9 +61,25 @@
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-    <div class="logo">
-      <span class="bold">Follow the White Squirrel</span><img src="fws_logo.png" alt="logo"><span>Nature tours in Ontario</span>
+    <div class="header">
+      <div class="logo">
+        <img src="fws_logo.png" alt="logo">
+        <div class="company-name">
+          <div class="emphasize">Follow the White Squirrel</div>
+          <div>Nature tours in Ontario</div>
+        </div>
+      </div>
+
+      <div class="languages">
+        <a href="#" id='en'>
+          <img src="images/canada-flag.png" alt="">
+        </a>
+        <a href="#" id="es">
+          <img src="images/spanish-flag.png" alt="">
+        </a>
+      </div>
     </div>
+
 
     <section id="landing"></section>
     <section id="intro"></section>
@@ -85,4 +102,4 @@
     </script>
 </body>
 
-</htm
+</html>
